# dynrsaur

./: Cargo.toml  README.md
src/: lib.rs
src/align/: align_marker.rs  align_markers.rs  aligned_bytes.rs  alignment.rs  mod.rs  valid_alignment.rs
src/erasure/: auto_drop_unique.rs  defer_downcast_unchecked_to_try_downcast.rs  erase.rs  erased.rs  erased_box.rs  erasure.rs  inline_erasure.rs  is.rs  mod.rs  tagged_erasure.rs  unknown.rs
src/util/: for_all_combinations.rs  mod.rs
